tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_numerator_witness/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: attempt to divide by zero
  ┌─ src/main.nr:2:20
  │
2 │     let a: Field = x / 0;
  │                    ----- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:2:20

Aborting due to 1 previous error
