tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_numerator_witness/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to divide by zero
  ┌─ src/main.nr:2:20
  │
2 │     let a: Field = x / 0;
  │                    -----
  │
  = Call stack:
    1. src/main.nr:2:20

Failed assertion
