tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_numerator_witness/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to divide by zero
  ┌─ src/main.nr:2:20
  │
2 │     let a: Field = x / 0;
  │                    -----
  │

Error interpreting main function
